--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>   
     <head>
-        <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" type="text/css" href="nicolelim18.github.io/main.css">
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Open+Sans+Condensed:300|Oswald" rel="stylesheet">
         <!--         <link rel="stylesheet" href="main.css"> CSS in case -->
     </head>
